bzr-builddeb (2.7.10) UNRELEASED; urgency=low

  [ Jonathan Riddell ]
  * Add get-orig-source command which will get the upstream tar file.
    LP: #862188
  * Change "bd-do" command to "builddeb-do" and alias "bd-do".
  * Add commit-message-from-changelog option for those who do not
    want commit message set automatically

  [ Jelmer Vernooij ]
  * Support importing and building packages with multiple upstream
    tarballs. LP: #653757, LP: #664834
  * Move .bzr-builddeb/default.conf to debian/bzr-builddeb.conf.
    LP: #793137
  * Fix test suite on Lucid, where dpkg-mergechangelogs is not available.

  [ Martin Packman ]
  * Fix test_utf8_changelog when run with older versions of python-debian.

  [ Jelmer Vernooij ]
  * Support svn-buildpackage tag names to find upstream versions.
    LP: #874263
  * Support --revision argument to merge-package. LP: #888590
  * By default, don't override the commit message from debian/changelog
    unless 'commit-message-from-changelog' is explicitly set to True. LP: #812749
  * Support running dep3-patch against remote repositories, and with
    open-ended revision ranges. LP: #893608

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 26 Nov 2011 16:01:16 +0100

bzr-builddeb (2.7.9) unstable; urgency=low

  [ Jelmer Vernooij ]
  * Support .tar.xz Debian files rather than .tar.lzma.

  [ Martin Packman ]
  * Support non-ascii characters in changelog entry when determining
    commit message. LP: #853664

  [ Jelmer Vernooij ]
  * Use more complete control file during examples. Closes: #642818

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 01 Oct 2011 21:27:05 +0200

bzr-builddeb (2.7.8) unstable; urgency=low

  * Improve error message when tag for upstream version can not be
    found. LP: #783882
  * Cope with newer versions of bzr raising IOError rather than
    NoSuchFile error. LP: #831351, Closes: #638219
  * Print proper error if uscan doesn't create the expected orig
    tarball. LP: #818093.
